# pytkquiz

./: .pre-commit-config.yaml  LICENSE  README.md  core_req.txt  language_quiz_app.py  main.py  notes.md  pyproject.toml  requirements.txt  test_language_quiz_app.py  words.csv  words_el.csv
.github/workflows/: python-app.yml
pytkquiz/: language_quiz_app.py  quiz_logic.py  sound_gen.py  streamlit_language_quiz_app.py  test_language_quiz_app.py  test_quiz_logic.py
